# drake-franka-driver

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  environ.bzl  externals_ext.bzl  gflags_ext.bzl  joint_angles.csv  lcmlog-2025-06-01.01  position_logger_data.txt  valid_shared_memory_patch.diff  vector_logger_data.txt
franka-driver/: BUILD.bazel  franka_driver.cc  panda_status_drake_subscriber.cc  panda_status_drake_subscriber.h  panda_status_drake_subscriber_main.cc  panda_status_subscriber.cc  shared_mem_panda.cpp  shared_memory.hpp
franka_description/: BUILD.bazel
franka_description/urdf/: panda.urdf  panda_basic_shapes.urdf
urdf_location/: BUILD.bazel  add_franka_urdf.yaml
