# -*- python -*-

load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "franka_driver_v5",
    srcs = [
        "franka_driver.cc",
    ],
    deps = [
        "@drake//common:common",
        "@drake//lcmtypes:panda",
        "@drake//multibody/plant",
        "@drake//multibody/parsing:parsing",
        "@gflags",
        "@lcm",
        "@libfranka_v5",
    ],
    data = [
        "//models:franka_control_models",
        "@drake//manipulation/models/franka_description:models",
    ],
)

cc_binary(
    name = "franka_driver_v4",
    srcs = [
        "franka_driver.cc",
    ],
    deps = [
        "@drake//common:common",
        "@drake//lcmtypes:panda",
        "@drake//multibody/plant",
        "@drake//multibody/parsing:parsing",
        "@gflags",
        "@lcm",
        "@libfranka_v4",
    ],
    data = [
        "//models:franka_control_models",
        "@drake//manipulation/models/franka_description:models",
    ],
)

cc_binary(
    name = "franka_hand_driver_v5",
    srcs = [
        "franka_hand_driver.cc",
    ],
    deps = [
        "@drake//common:common",
        "@drake//lcmtypes:panda",
        "@drake//lcmtypes:schunk",
        "@gflags",
        "@lcm",
        "@libfranka_v5",
    ],
    data = [
        "//models:franka_control_models",
        "@drake//manipulation/models/franka_description:models",
    ],
)

cc_binary(
    name = "franka_hand_driver_v4",
    srcs = [
        "franka_hand_driver.cc",
    ],
    deps = [
        "@drake//common:common",
        "@drake//lcmtypes:panda",
        "@drake//lcmtypes:schunk",
        "@gflags",
        "@lcm",
        "@libfranka_v4",
    ],
    data = [
        "//models:franka_control_models",
        "@drake//manipulation/models/franka_description:models",
    ],
)

cc_binary(
    name = "panda_status_subscriber",
    srcs = [
        "panda_status_subscriber.cc",
    ],
    deps = [
        "@drake//lcmtypes:panda",
        "@lcm",
    ],
)

cc_library(
    name = "panda_status_drake_subscriber",
    srcs = [
        "panda_status_drake_subscriber.cc",
    ],
    hdrs = [
        "panda_status_drake_subscriber.h",
    ],
    deps = [
        "@drake//common:common",
        "@drake//lcmtypes:panda",
        "@drake//systems/framework",
        "@drake//systems/analysis",
        "@drake//systems/lcm",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "panda_status_drake_subscriber_bin",
    srcs = [
        "panda_status_drake_subscriber_main.cc",
    ],
    deps = [
        ":panda_status_drake_subscriber",
    ],
)

add_lint_tests()